Height fix on mobile modal

--- a/src/app/Projects/style.css
+++ b/src/app/Projects/style.css
@@ -128,9 +128,10 @@
   position: fixed;
   width: 100vw;
   height: 100%;
+  min-height: -webkit-fill-available;
   background-color: rgba(30, 30, 56, 0.9);
   z-index: 3;
-  top: 0;
+  bottom: 0;
   left: 0;
   animation-name: ModalAnimation;
   animation-duration: 0.3s;
@@ -254,5 +255,12 @@
   #projects #project-list .card .image-container img {
     width: 100%;
     height: auto;
+  }
+  #projects #project-list .card .image-container:hover .button-container {
+    opacity: 0;
+  }
+  #projects #project-list .card .image-container:hover img {
+    filter: none;
+    transform: none;
   }
 }
